--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -137,7 +137,7 @@ img {
 }
 
 .single-item:hover {
-  background-color: var(--green-900);
+  background-color: var(--green-800);
   text-decoration: none;
 }
 
@@ -146,10 +146,10 @@ img {
   transform: translateY(0);
 }
 
-.single-item:hover .single-item__2lines {
+/* .single-item:hover .single-item__2lines {
   -webkit-line-clamp: 10;
   line-clamp: 10;
-}
+} */
 
 .single-item__div-image-button {
   position: relative;
@@ -163,6 +163,17 @@ img {
   align-items: center;
   justify-content: center;
   border-radius: 50%;
+}
+
+.single-item__div-image::after {
+  content: '';
+  border-radius: 50%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.2);
 }
 
 .single-item__icon {
